# libscribe

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
src/: config.py
src/app/: main.py
src/ingestion/: github_reader.py  processing.py
src/models/: document.py
src/storage/: vector_db.py
src/utils/: repo_parsing.py
tests/: test_config.py  test_document.py  test_github_reader.py  test_processing.py  test_vector_db.py
