[project]
name = "libscribe"
version = "0.1.0"
description = "A tool for ingesting library documentation and source code to enable AI models to provide context-aware coding assistance, usage examples, and best practices."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.7",
    "llama-index>=0.12.14",
    "llama-index-embeddings-voyageai>=0.3.4",
    "llama-index-llms-litellm>=0.3.0",
    "llama-index-readers-github>=0.5.0",
    "llama-index-vector-stores-pinecone>=0.4.3",
    "pinecone[grpc]>=5.4.2",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.5",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uvicorn]
app = "src.app.main:app"
host = "0.0.0.0"
port = 8000
reload = true
